<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthActivites.LoginActivity">

    <TextView
        android:id="@+id/loginActivityTVEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="19dp"
        android:text="@string/emailTV"
        app:layout_constraintEnd_toStartOf="@+id/logInActivityEmailForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logInActivityTVPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="19dp"
        android:text="@string/passwordTV"
        app:layout_constraintEnd_toStartOf="@+id/logInActivityPasswordForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityTVEmail" />

    <TextView
        android:id="@+id/loginActivityLogInTVTitle"
        android:layout_width="48dp"
        android:layout_height="19dp"
        android:layout_marginEnd="180dp"
        android:text="@string/loginTitle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/logInActivityEmailForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityLogInTVTitle" />

    <EditText
        android:id="@+id/logInActivityPasswordForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInActivityEmailForm" />

    <Button
        android:id="@+id/logInActivitySignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        android:text="@string/logInButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>