<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthActivities.VerifySignUpActivity">

    <TextView
        android:id="@+id/verifySignUpActivtiyTVConfirmationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="19dp"
        android:text="@string/signUpTVConfirmationCode"
        app:layout_constraintEnd_toStartOf="@+id/verifySignUpActivityFormConfirmationCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verifySignUpActivityTVTitle"
        android:layout_width="103dp"
        android:layout_height="22dp"
        android:layout_marginEnd="160dp"
        android:text="@string/verifySignUpTVTitle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/verifySignUpActivityFormConfirmationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifySignUpActivityTVTitle" />

    <Button
        android:id="@+id/verifyActivitySubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="352dp"
        android:text="@string/verifySubmitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>